Fix undelete button to disappear when the tag has already been recovered

BUG:440337