libs/resources/KisTagModel.cpp
@@ -126,6 +126,7 @@ QVariant KisAllTagsModel::data(const QModelIndex &index, int role) const
             }
             case Qt::UserRole + ResourceType:
                 return d->resourceType;
+            case Qt::CheckStateRole:
             case Qt::UserRole + Active:
                 return true;
             case Qt::UserRole + KisTagRole:
@@ -153,6 +154,7 @@ QVariant KisAllTagsModel::data(const QModelIndex &index, int role) const
             }
             case Qt::UserRole + ResourceType:
                 return d->resourceType;
+            case Qt::CheckStateRole:
             case Qt::UserRole + Active:
                 return true;
             case Qt::UserRole + KisTagRole:
@@ -196,6 +198,7 @@ QVariant KisAllTagsModel::data(const QModelIndex &index, int role) const
                 return d->query.value("url");
             case Qt::UserRole + ResourceType:
                 return d->query.value("resource_type");
+            case Qt::CheckStateRole:
             case Qt::UserRole + Active:
                 return d->query.value("active");
             case Qt::UserRole + KisTagRole:
@@ -217,7 +220,9 @@ bool KisAllTagsModel::setData(const QModelIndex &index, const QVariant &value, i
 {
     int id = data(index, Qt::UserRole + Id).toInt();
 
-    if (index.isValid() && role == Qt::CheckStateRole) {
+    if (index.isValid() &&
+        (role == Qt::CheckStateRole || role == Active)) {
+
         QSqlQuery q;
         if (!q.prepare("UPDATE tags\n"
                        "SET    active = :active\n"
