libs/resourcewidgets/KisTagChooserWidget.cpp
@@ -40,6 +40,7 @@ public:
     KisTagModel *model;
     KisTagSP cachedTag;
     QString resourceType;
+    QScopedPointer<KisTagModel> allTagsModel;
 };
 
 KisTagChooserWidget::KisTagChooserWidget(KisTagModel *model, QString resourceType, QWidget* parent)
@@ -57,6 +58,8 @@ KisTagChooserWidget::KisTagChooserWidget(KisTagModel *model, QString resourceTyp
     d->comboBox->setModel(model);
 
     d->model = model;
+    d->allTagsModel.reset(new KisTagModel(resourceType));
+    d->allTagsModel->setTagFilter(KisTagModel::ShowAllTags);
 
     QGridLayout* comboLayout = new QGridLayout(this);
 
@@ -94,6 +97,8 @@ KisTagChooserWidget::KisTagChooserWidget(KisTagModel *model, QString resourceTyp
     // Occurs when model changes under the user e.g. +/- a resource storage.
     connect(d->model, SIGNAL(modelAboutToBeReset()), this, SLOT(cacheSelectedTag()));
     connect(d->model, SIGNAL(modelReset()), this, SLOT(restoreTagFromCache()));
+    connect(d->allTagsModel.data(), SIGNAL(dataChanged(const QModelIndex&, const QModelIndex&, const QVector<int>&)),
+            this, SLOT(slotTagModelDataChanged(const QModelIndex&, const QModelIndex&, const QVector<int>&)));
 
 }
 
@@ -108,7 +113,6 @@ void KisTagChooserWidget::tagToolDeleteCurrentTag()
     if (!currentTag.isNull() && currentTag->id() >= 0) {
         d->model->setTagInactive(currentTag);
         setCurrentIndex(0);
-        d->tagToolButton->setUndeletionCandidate(currentTag);
         d->model->sort(KisAllTagsModel::Name);
     }
 }
@@ -166,7 +170,6 @@ void KisTagChooserWidget::tagToolUndeleteLastTag(KisTagSP tag)
     bool success = d->model->setTagActive(tag);
     setCurrentIndex(previousIndex);
     if (success) {
-        d->tagToolButton->setUndeletionCandidate(KisTagSP());
         setCurrentItem(tag->name());
         d->model->sort(KisAllTagsModel::Name);
     }
@@ -183,6 +186,41 @@ void KisTagChooserWidget::restoreTagFromCache()
         QModelIndex cachedIndex = d->model->indexForTag(d->cachedTag);
         setCurrentIndex(cachedIndex.row());
         d->cachedTag = nullptr;
+    }
+}
+
+void KisTagChooserWidget::slotTagModelDataChanged(const QModelIndex &topLeft, const QModelIndex &bottomRight, const QVector<int> roles)
+{
+    // we care only about the check status
+    if (!roles.isEmpty() && !roles.contains(Qt::CheckStateRole)) {
+        return;
+    }
+
+    const QModelIndex currIdx =
+            d->allTagsModel->indexForTag(d->tagToolButton->undeletionCandidate());
+
+    if (currIdx.isValid() &&
+        currIdx.row() >= topLeft.row() && currIdx.row() <= bottomRight.row() &&
+        currIdx.column() >= topLeft.column() && currIdx.column() <= bottomRight.column()) {
+
+        const bool isNowActive = d->allTagsModel->data(currIdx, Qt::CheckStateRole).toBool();
+
+        if (isNowActive) {
+            d->tagToolButton->setUndeletionCandidate(KisTagSP());
+        }
+    }
+
+    for (int row = topLeft.row(); row <= bottomRight.row(); row++) {
+        for (int column = topLeft.column(); column <= bottomRight.column(); column++) {
+            const QModelIndex idx = d->allTagsModel->index(row, column);
+
+            const bool isActive = d->allTagsModel->data(idx, Qt::CheckStateRole).toBool();
+
+            if (idx != currIdx && !isActive) {
+                d->tagToolButton->setUndeletionCandidate(d->allTagsModel->tagForIndex(idx));
+                break;
+            }
+        }
     }
 }
 
