libs/resourcewidgets/KisTagToolButton.cpp
@@ -115,12 +115,17 @@ void KisTagToolButton::setUndeletionCandidate(const KisTagSP deletedTag)
 {
     if (deletedTag.isNull() || deletedTag->name().isEmpty()) {
         d->undeleteTagAction->setVisible(false);
-        return;
+        d->undeleteCandidate.clear();
     } else {
         d->undeleteCandidate = deletedTag;
         d->undeleteTagAction->setText(i18n("Undelete") +" "+ deletedTag->name());
         d->undeleteTagAction->setVisible(true);
     }
+}
+
+KisTagSP KisTagToolButton::undeletionCandidate() const
+{
+    return d->undeleteCandidate;
 }
 
 void KisTagToolButton::setCurrentTag(const KisTagSP tag)
