libs/resourcewidgets/KisTagToolButton.h
@@ -55,6 +55,7 @@ private:
     /// \param deletedTag tag that can be undeleted (activated again)
     ///
     void setUndeletionCandidate(const KisTagSP deletedTag);
+    KisTagSP undeletionCandidate() const;
 
     void setCurrentTag(const KisTagSP tag);
 
